--- a/app/module/video-panel/element/view/resource-upsert.html
+++ b/app/module/video-panel/element/view/resource-upsert.html
@@ -45,8 +45,8 @@
                     <paper-input id="name" name="name" label="Name" value="{{resource.name}}" required></paper-input>
                     <paper-input id="nameResource" name="name" label="Name resource" value="{{resource.resourceReference.name}}" required></paper-input>
                     <div class="flex flex-horizontal">
-                        <paper-checkbox id="checkSingle" class="flex flex-vertical-end" style="padding-bottom: 10px; padding-right: 20px;" checked="{{resource.nested}}">
-                            Single row content
+                        <paper-checkbox id="checkSingle" on-tap="resetCheckBox" single-resource class="flex flex-vertical-end" style="padding-bottom: 10px; padding-right: 20px;" checked="{{resource.videoPanel.singleResource}}">
+                            Single content
                         </paper-checkbox>
                         <paper-autocomplete
                                 style="flex: 1;"
@@ -91,7 +91,7 @@
                         </paper-autocomplete>
                     </div>
                     <div hidden$="{{!hideResourceSection}}">
-                        <div id="single" hidden$="{{!resource.nested}}">
+                        <div id="single" hidden$="{{!resource.videoPanel.singleResource}}">
                             <paper-material class="flex-1">
                                 <paper-autocomplete
                                         style="flex: 1;"
@@ -141,7 +141,7 @@
                                 </div>
                             </paper-material>
                         </div>
-                        <div id="multi" hidden$="{{resource.nested}}">
+                        <div id="multi" hidden$="{{resource.videoPanel.singleResource}}">
                             <div class="flex flex-horizontal">
                                 <template is="dom-repeat" items="[[videoPanels]]" as="videoPanel">
                                     <paper-material videoPanel="videoPanel" class="flex-1" id="{{videoPanel.id}}">
@@ -190,7 +190,9 @@
                                                 </paper-chip>
                                             </template>
                                         </div>
-                                        <paper-checkbox checked="{{videoPanel.esclude}}">Esclude video panel</paper-checkbox>
+                                        <template is="dom-if" if="{{computeMonitorPolygon(videoPanel)}}">
+                                            <paper-checkbox single-resource checked="{{videoPanel.singleResource}}" on-tap="resetCheckBox">Single content</paper-checkbox>
+                                        </template>
                                     </paper-material>
                                 </template>
                             </div>
@@ -279,6 +281,8 @@
                     return;
                 }
 
+                this.$.singleResource.videoPanel = this.resource.getVideoPanel();
+                this.$.panel.text = this.resource.getVideoPanel().name;
                 this.hideResourceSection = true;
                 this._setVideoPanels(resource.hasVideoPanel()
                     ? resource.getVideoPanel().getVideoPanels()
@@ -334,7 +338,7 @@
              *
              */
             createResource() {
-                this.$.resourceGenerator.create();
+                serviceManager.get('VideoPanelResourceService').generateResource(this.resource);
             }
 
             /**
@@ -406,159 +410,57 @@
             resetResource() {
 
                 this.$.formPanelResource.reset();
+                this.$.panel.reset();
                 this.hideResourceSection = false;
                 this.resource = new PanelResource();
             }
 
             /**
-
-
-            _changeSidelineResource(newValue) {
-
-                if (!newValue || !newValue.id) {
-                    return;
-                }
-
-                let elementsToClear = this.shadowRoot.querySelectorAll('div.listClass');
-
-                for (let cont = 0; elementsToClear.length > cont; cont++) {
-                    while (elementsToClear[cont].firstChild) {
-                        elementsToClear[cont].removeChild(elementsToClear[cont].firstChild);
-                    }
-                }
-
+             * @param videoPanel
+             * @return {boolean}
+             */
+            computeMonitorPolygon(videoPanel) {
 
                 serviceManager.get('StoragePluginManager')
-                    .get(VideoPanelConfig.NAME_SERVICE)
-                    .get(newValue.sidelineReference.sidelineId)
+                    .get(MonitorConfig.NAME_SERVICE)
+                    .get(videoPanel.virtualMonitorReference.virtualMonitorId)
                     .then((data) => {
+                        if (!data) {
+                            return false;
+                        }
 
-                        this._setSideline(data);
-                        this.$.sideline.text = this.sideline.name;
-                        this.$.checkSingle.checked = newValue.isSingleSidelineResource();
-                        if (this.$.checkSingle.checked ) {
-                            for (let cont = 0; newValue.resourcesInSideline[0].resources.length > cont; cont++) {
-
-                                serviceManager.get('StoragePluginManager')
-                                    .get(ResourceConfig.NAME_SERVICE)
-                                    .get(newValue.resourcesInSideline[0].resources[cont])
-                                    .then((data) => {
-                                        this.$.singleSidelineResource.appendChild(this._createChip(data));
-                                    });
-                            }
-                        } else {
-
-                            setTimeout(
-                                () => {
-                                    let elements = this.shadowRoot.querySelectorAll('div[sidelinemultiresource]');
-                                    for (let cont = 0; elements.length > cont; cont++) {
-                                        let resources = this.sidelineResource.getArrayResourceFromSidelineResource(elements[cont].sideline);
-
-                                        for (let cont2 = 0; resources.length > cont2; cont2++) {
-
-                                            let elementToAppend = elements[cont].querySelector('div.listClass');
-                                            serviceManager.get('StoragePluginManager')
-                                                .get(ResourceConfig.NAME_SERVICE)
-                                                .get(resources[cont2])
-                                                .then((data) => {
-                                                    elementToAppend.appendChild(this._createChip(data));
-                                                });
-                                        }
-                                    }
-                                },
-                                300
-                            );
+                        let monitor = data.getMonitor(videoPanel.virtualMonitorReference.monitorId);
+                        if (!monitor.polygon) {
+                            this._visibilityCheckerMonitorPolygon(videoPanel.id);
                         }
                     });
+                return true;
             }
 
-
-            submitSidelineResourceButton() {
-                this.$.formSidelineResource.submit();
-            }
-
-
-            submitSidelineResource(evt) {
-                evt.preventDefault();
-
-                // TODO validation
-
-                this.sidelineResource.sidelineReference = this._generateSidelineReference(this.sideline);
-                this.sidelineResource.resourcesInSideline = [];
-                let paperChips =  [];
-                let resourcesInSideline = {};
-
-                if (this.$.checkSingle.checked) {
-
-                    this.sidelineResource.resourcesInSideline.push(
-                        this._generateResourceInSideline(
-                            this._generateSidelineReference(this.sideline),
-                            this.shadowRoot.querySelectorAll('#singleSidelineResource paper-chip')
-                        )
-                    );
-                } else {
-                    let elements = this.shadowRoot.querySelectorAll('div[sidelinemultiresource]');
-
-                    for (let cont = 0; elements.length > cont; cont++) {
-
-                        this.sidelineResource.resourcesInSideline.push(
-                            this._generateResourceInSideline(
-                                this._generateSidelineReference(elements[cont].sideline, this.sideline),
-                                elements[cont].querySelectorAll('paper-chip')
-                            )
-                        );
+            /**
+             * @private
+             */
+            _visibilityCheckerMonitorPolygon(videoPanelId, hyde = true) {
+                let elements = this.shadowRoot.querySelectorAll('dom-if');
+                for (let cont = 0; elements.length > cont; cont++) {
+                    if (elements[cont].parentElement.id === videoPanelId) {
+                        elements[cont].if = !hyde;
                     }
                 }
-
-                let method = 'save';
-                if (this.sidelineResource.id) {
-                    method = 'update';
-                }
-
-                serviceManager.get('StoragePluginManager')
-                    .get(VideoPanelConfig.RESOURCE_SERVICE)[method](this.sidelineResource)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' sideline resource');
-                    })
-                    .catch((err) => {
-                            console.error(err)
-                        }
-                    );
             }
 
-
-            _generateSidelineReference(sideline, parentSideline = null) {
-                let reference = new SidelineReference();
-                reference.sidelineId = sideline.id;
-                reference.name = sideline.name;
-                reference.sidelineParentId = (parentSideline !== null) ? parentSideline.id : null;
-                return reference;
-            }
-
-
-            _generateResourceInSideline(sidelineReference, paperChips) {
-
-                let resourceInSideline = {
-                    sidelineReference : sidelineReference,
-                    resources : []
-                };
-
-                for (let cont = 0; paperChips.length > cont; cont++) {
-                    resourceInSideline.resources.push(paperChips[cont].resource.id);
-                }
-
-                return resourceInSideline;
-            }
-
-
-            _clearData(evt) {
-                this.$.name.value = null;
-                this.$.checkSingle.checked = false;
-                this.$.sideline.clear();
-                this._setSideline(null);
-            }
-
+            /**
+             * @param evt
              */
+            resetCheckBox(evt) {
+                let elements = this.shadowRoot.querySelectorAll('paper-checkbox[single-resource]');7
+
+                for (let cont = 0; elements.length > cont; cont++) {
+                    if (evt.target.parentElement.id !== elements[cont].parentElement.id) {
+                        elements[cont].checked = false;
+                    }
+                }
+            }
         }
 
         window.customElements.define(ElementVideoPanelViewResourceUpsert.is, ElementVideoPanelViewResourceUpsert);
