--- a/app/module/video-panel/element/view/resource-upsert.html
+++ b/app/module/video-panel/element/view/resource-upsert.html
@@ -12,6 +12,7 @@
 <link rel="import" href="../../../../bower_components/paper-chip/paper-chip-input.html">
 <link rel="import" href="../../../../bower_components/paper-chip/paper-chip-icons.html">
 <link rel="import" href="../../../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../../../bower_components/paper-progress/paper-progress.html">
 
 <link rel="import" href="../../../../element/file-upload/file-upload.html">
 <link rel="import" href="../../../../element/layout/view/storage-behaviour.html">
@@ -34,6 +35,12 @@
 
             paper-material .subtitle {
                 font-style: italic;
+            }
+
+            paper-progress {
+                --paper-progress-indeterminate-cycle-duration: 20s;
+                margin-top: 10px;
+                width: 100%;
             }
         </style>
         <style include="global-layout"></style>
@@ -198,10 +205,11 @@
                         </div>
                     </div>
                 </div>
+                <paper-progress id="resourceProgress" hidden$="{{progressResource}}" indeterminate class="slow"></paper-progress>
                 <div>
                     <div class="flex flex-horizontal-end" style="margin-top: 20px;">
-                        <paper-button on-tap="createResource">Create resource</paper-button>
-                        <paper-button on-tap="submitVideoPanelResourceButton">{{labelAction}}</paper-button>
+                        <paper-button id="createVideoResource" on-tap="createResource">Create resource</paper-button>
+                        <paper-button id="upsertResource" on-tap="submitVideoPanelResourceButton">{{labelAction}}</paper-button>
                     </div>
                 </div>
             </form>
@@ -255,6 +263,12 @@
                         value: VideoPanelConfig.RESOURCE_SERVICE
 
                     },
+
+                    progressResource: {
+                        readOnly: true,
+                        notify: true,
+                        value: true
+                    }
                 }
             }
 
@@ -338,13 +352,62 @@
              */
             createResource() {
 
+                let locationResource = new LocationPath(
+                    `${dsign.Utils.uid}.mp4`,
+                    serviceManager.get('Application').getBasePath('../tmp')
+                );
+
+                this._setProgressResource(false);
+                this.disableButton();
                 serviceManager.get('VideoPanelResourceService').generateResource(
                     this.resource,
-                    new LocationPath(`${dsign.Utils.uid}.mp4`, serviceManager.get('Application').getBasePath('../tmp'))
+                    locationResource
                 ).then((data) => {
-                    console.log('complete', data);
+
+                    this._setProgressResource(true);
+                    this.enableButton();
+
+                    // TODO get metadata from resource
+                    let videoResource = new Video();
+                    videoResource.location = locationResource;
+                    videoResource.type = 'video/mp4';
+                    videoResource.setTmpSourcePath(new SourcePath(locationResource.getFullPath()));
+                    videoResource.name = this.resource.resourceReference.name;
+                    videoResource.tags = ['video-panel'];
+
+                    let method = 'save';
+                    if (this.resource.resourceReference.referenceId) {
+                        method = 'update';
+                        videoResource.id = this.resource.resourceReference.referenceId;
+                    }
+
+                    serviceManager.get('StoragePluginManager')
+                        .get(ResourceConfig.NAME_SERVICE)[method](videoResource)
+                        .then((data) => {
+                            serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' resource');
+                            if (method === 'save') {
+                                this.resource.resourceReference.referenceId = data.id;
+                                this.storage['update'](this.resource)
+                                    .then((data) => {
+                                        serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' video panel resource');
+
+                                    })
+                                    .catch((err) => {
+                                            console.log(err);
+                                        }
+                                    );
+                            }
+                        })
+                        .catch((err) => {
+                                console.log(err)
+                            }
+                        );
+
+
                 }).catch((error) => {
                     console.error(error);
+                    this._setProgressResource(true);
+                    this.enableButton();
                 });
             }
 
@@ -454,6 +517,22 @@
                         elements[cont].if = !hyde;
                     }
                 }
+            }
+
+            /**
+             *
+             */
+            disableButton() {
+                this.$.createVideoResource.disabled = true;
+                this.$.upsertResource.disabled = true;
+            }
+
+            /**
+             *
+             */
+            enableButton() {
+                this.$.createVideoResource.disabled = false;
+                this.$.upsertResource.disabled = false;
             }
 
             /**
