--- a/app/module/timeline/element/view/upsert.html
+++ b/app/module/timeline/element/view/upsert.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html">
 
 <link rel="import" href="../../../../element/file-upload/file-upload.html">
-<link rel="import" href="../../../../element/layout/view/storage-behaviour.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-resource-behaviour.html">
 
 <link rel="import" href="../timeline-item/timeline-item.html">
 
@@ -152,7 +152,7 @@
     </template>
 
     <script>
-        class ElementTimelineViewUpsert extends StorageBehaviour {
+        class ElementTimelineViewUpsert extends StorageAdapterResourceBehaviour {
 
             static get is() {
                 return 'timeline-view-upsert';
@@ -266,7 +266,7 @@
             submitTimeline(evt) {
                 evt.preventDefault();
 
-                let method = this.getStorageMethod();
+                let method = this.getStoragePersistMethod();
                 this.storage[method](this.resource)
                     .then((data) => {
                         serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' timeline ');
